// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Type: icon 1`] = `
<div
  data-test="component-button"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiIconButton-root makeStyles-useOther-83 MuiIconButton-colorPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button Type: normal contained 1`] = `
<div
  data-test="component-button"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root makeStyles-useOther-49 MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Download
    </span>
  </button>
</div>
`;

exports[`Button Type: normal with icon outlined 1`] = `
<div
  data-test="component-button"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root makeStyles-useOther-66 MuiButton-outlined MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <span
        className="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </span>
      Download
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button Type: text 1`] = `
<div
  data-test="component-button"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root makeStyles-useOther-91 MuiButton-text MuiButton-textPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Download
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;
